# cabal-plan-to-nix

./: CHANGELOG.md  cabal-plan-to-nix.cabal  flake.nix
app/: Main.hs
nix/: hix.nix
