cabal-version:   3.6
name:            cabal-plan-to-nix
version:         0.1.0.0
license:         NONE
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cabal-plan-to-nix
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , bytestring
                    , containers
                    , filepath
                    , Cabal                ^>= 3.8
                    , Cabal-syntax         ^>= 3.8
                    , cabal-install        ^>= 3.8
                    , cabal-install-solver ^>= 3.8
                    , hnix
                    , network-uri
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
